Improved homepage layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-<h2>Meytal Tour</h2>
+<div class="row" style="text-align:center;"><h1>Meytal - Behind The Tour</h1></div>
+<div class="jumbotron">
+    <div class="container">
+        <div class="col-sm-6">
+            Vimeo
+        </div>
+        <div class="col-sm-6">
+            <h3>Get unlimited access to all Behind The Scenes videos, photos and live streams</h3>
+        </div>
+    </div>
+</div>
