Improved home layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,21 @@
-<div class="row" style="text-align:center;"><h1>Meytal - Behind The Tour</h1></div>
+<div class="row" style="text-align:center;">
+    <h1>Meytal - Behind The Tour</h1>
+</div>
 <div class="jumbotron">
     <div class="container">
-        <div class="col-sm-6">
-            Vimeo
+        <div class="col-sm-8">
+            <div class="vimeo-wrapper">
+                <iframe src="https://player.vimeo.com/video/135282472?autoplay=0" frameborder="0" height="328" width="100%"></iframe>
+            </div>
         </div>
-        <div class="col-sm-6">
-            <h3>Get unlimited access to all Behind The Scenes videos, photos and live streams</h3>
+        <div class="col-sm-4">
+            <div class="row">
+                <h1><strong>30</strong></h1>
+                <h3>days to go!</h3>
+            </div>
+            <div class="row">
+                <h5>Get unlimited access to all Behind The Scenes videos, photos and live streams</h4>
+            </div>
         </div>
     </div>
 </div>
