--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -38,3 +38,21 @@
         height:166px;
     }
 }
+
+.signup-btn {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.signup-btn .btn{
+    background: #4581B5 none repeat scroll 0% 0% !important;
+    color: #FFF !important;
+    font-size: 16px;
+    padding: 16px 30px !important;
+    opacity: 1;
+    transition: opacity 0.1s ease-in-out 0s;
+}
+
+.signup-btn .btn:hover {
+    opacity: 0.8;
+}
