--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,14 +8,11 @@
                 <iframe src="https://player.vimeo.com/video/135282472?autoplay=0" frameborder="0" height="328" width="100%"></iframe>
             </div>
         </div>
-        <div class="col-sm-4">
-            <div class="row">
+        <div class="col-sm-4" style="padding:20px;">
                 <h1><strong>30</strong></h1>
                 <h3>days to go!</h3>
-            </div>
-            <div class="row">
                 <h5>Get unlimited access to all Behind The Scenes videos, photos and live streams</h4>
-            </div>
+                <div class="container signup-btn"><button type="button" class="btn btn-default">Get Full Access</button></div>
         </div>
     </div>
 </div>
