--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="text-align:center;">
+<div class="row" style="text-align:center;margin:25px;">
     <h1>Meytal - Behind The Tour</h1>
 </div>
 <div class="jumbotron">
@@ -8,11 +8,11 @@
                 <iframe src="https://player.vimeo.com/video/135282472?autoplay=0" frameborder="0" height="328" width="100%"></iframe>
             </div>
         </div>
-        <div class="col-sm-4" style="padding:20px;">
+        <div class="col-sm-3 col-sm-offset-1">
                 <h1><strong>30</strong></h1>
                 <h3>days to go!</h3>
                 <h5>Get unlimited access to all Behind The Scenes videos, photos and live streams</h4>
-                <div class="container signup-btn"><button type="button" class="btn btn-default">Get Full Access</button></div>
+                <div class="container signup-btn"><%= link_to "Get Full Access", new_user_registration_path, method: :get %></div>
         </div>
     </div>
 </div>
