--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="row" style="text-align:center;margin:25px;">
-    <h1>Meytal - Behind The Tour</h1>
+<div class="row" style="text-align:center;margin:10px;">
+    <h1 style="margin:10px;">Meytal - Behind The Tour</h1>
 </div>
 <div class="jumbotron">
     <div class="container">
