--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
 <nav class="navbar navbar-inverse navbar-static-top custom-nav" role="navigation">
   <div class='container'>
       <div class="navbar-header" style="width:100%;">
-            <%= link_to "Home", root_path, method: :get, class: 'btn navbar-btn home-btn' %>
+        <% if !(current_page?(root_path)) %>
+          <%= link_to root_path, method: :get, class: 'btn navbar-btn home-btn' do %>
+          <i class="fa fa-arrow-left"></i> Home
+          <% end %>
+        <% end %>
         <% if current_user %>
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn floatright' %>
         <% else %>
