Fixed navbar 'Home' button, updated form submit button for stripe

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div class='container'>
       <div class="navbar-header" style="width:100%;">
         <% if !(current_page?(root_path)) %>
-          <%= link_to root_path, method: :get, class: 'btn navbar-btn home-btn' do %>
+          <%= link_to root_path, class: 'btn navbar-btn home-btn' do %>
           <i class="fa fa-arrow-left"></i> Home
           <% end %>
         <% end %>
