--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,7 +33,7 @@
           <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}%>
         </div>
         <div class="actions form-group">
-          <%= f.submit "Sign up", class: 'btn btn-success' %>
+          <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
