Added flash hash

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,12 @@ body {
     cursor: default;
 }
 
+.alert {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
+
 .vimeo-wrapper iframe {
     height:354px;
 }
