--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,9 @@
           <% end %>
         <% end %>
         <% if current_user %>
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn floatright' %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn navbar-btn home-btn floatright' %>
         <% else %>
-          <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn floatright', method: :get %>
-          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-success navbar-btn floatright', method: :get %>
+          <%= link_to "Log In", new_user_session_path, class: 'btn navbar-btn home-btn floatright', method: :get %>
         <% end %>
       </div>
   </div>
