--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,12 @@
 </div>
 <div class="jumbotron">
     <div class="container">
-        <div class="col-sm-8">
+        <div class="col-md-8">
             <div class="vimeo-wrapper">
                 <iframe src="https://player.vimeo.com/video/135282472?autoplay=0" frameborder="0" height="328" width="100%"></iframe>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <div class="container">
                 <div class="well">
                     <h1><strong>30</strong></h1>
