Improved frontpage layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -140,8 +140,8 @@ body {
         margin-top: 10px;
         margin-bottom: 10px;
     }
-    .col-sm-4 {
-        margin: 20px;
+    .col-md-4 {
+        margin-top: 30px;
     }
     .signup-btn a {
         font-size: 16px;
