--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="row" style="text-align:center;margin:10px;">
     <h1 style="margin:10px;">Meytal - Behind The Tour</h1>
 </div>
-<div class="jumbotron">
+<div class="jumbotron" style="padding-bottom: 5px;">
     <div class="container">
         <div class="col-md-8">
             <div class="vimeo-wrapper">
