--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,8 +11,9 @@
         <div class="col-md-4">
             <div class="container">
                 <div class="well">
+                    <div class="img-bg"><img src="http://i.imgur.com/kQcJRmy.png"></div>
                     <h1><strong>30</strong></h1>
-                    <h3>days to go!</h3><br>
+                    <h3>days to go!</h3>
                     <h5>Get unlimited access to all Behind The Scenes videos, photos and live streams</h4>
                     <div class="signup-btn"><%= link_to "Get Full Access", new_user_registration_path, method: :get %></div>
                 </div>
