--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,6 +122,10 @@ body {
     transition: all 0.1s ease-in-out 0s;
 }
 
+.devise-btn {
+    margin-top: 15px;
+}
+
 @media only screen and (max-width: 1199px) {
     .vimeo-wrapper iframe {
         height:279px;
