Added partner section mobile css to fit screen

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -126,6 +126,7 @@ body {
     margin-top: 15px;
 }
 
+
 @media only screen and (max-width: 1199px) {
     .vimeo-wrapper iframe {
         height:279px;
@@ -193,6 +194,9 @@ body {
     .img-bg img {
         width: 60px;
         margin-top: 10px;
+    }
+    #partners img {
+        width: 100px;
     }
 }
 
